# bill-manager

./: .env  Cargo.toml  bill-manager-api.http  docker-compose.yaml
api/: Cargo.toml
api/src/: context.rs  error.rs  main.rs  response.rs  route.rs
api/src/route/: bill_routes.rs  create_bill.rs  list_bill.rs  mod.rs
business/: Cargo.toml
business/src/: error.rs  lib.rs
business/src/bill/: model.rs  repository.rs  service.rs
business/src/interest/: model.rs  repository.rs  service.rs
infrastructure/: Cargo.toml
infrastructure/src/: database.rs  environment.rs  lib.rs  observability.rs  telemetry.rs
migrations/: 20230417024403_CREATE_TABLES.sql
persistence/: Cargo.toml
persistence/src/: bill.rs  interest.rs  lib.rs
