[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infrastructure = { path = "../infrastructure" }
business = { path = "../business" }
persistence = { path = "../persistence" }
tokio = { workspace = true }
axum = { workspace = true }
thiserror = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
axum-macros = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
bigdecimal = { workspace = true }